flex gap fix

--- a/style.css
+++ b/style.css
@@ -52,7 +52,6 @@ textarea::placeholder {
   width: 100%;
   max-width: 900px;
   margin: 0 auto;
-  flex: 1;
 }
 
 .p-mark {
@@ -175,13 +174,14 @@ input[type="button"] {
   flex-wrap: wrap;
   display: flex;
   justify-content: center;
-  flex: 1;
+  align-items: flex-start;
+  column-gap: 10px;
 }
 
 .right-section {
   width: 100%;
   max-width: 430px;
-  padding: 15px;
+  padding: 20px;
 }
 
 .left-section {
